--- a/SwampAttack/proj.android/res/values/strings.xml
+++ b/SwampAttack/proj.android/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">SwampAttack</string>
+    <string name="app_name">屠魔猎人范海辛</string>
 </resources>
